# SakeSensei

./: .gitignore  README.md  architecture.drawio
agent/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agent.py  pyproject.toml  runtime_context.py  sake_tools.py
agent/data/: sake_00001.json  sake_00002.json  sake_00003.json  sake_00004.json  sake_00005.json  sake_00006.json  sake_00007.json  sake_00008.json  sake_00009.json  sake_00010.json  sake_00011.json  sake_00012.json  sake_00013.json  sake_00014.json  sake_00015.json  sake_00016.json  sake_00017.json  sake_00018.json  sake_00019.json  sake_00020.json  sake_00021.json  sake_00022.json  sake_00023.json  sake_00024.json  sake_00025.json  sake_00026.json  sake_00027.json  sake_00028.json  sake_00029.json  sake_00030.json  sake_00031.json  sake_00032.json  sake_00033.json  sake_00034.json  sake_00035.json  sake_00036.json  sake_00037.json  sake_00038.json  sake_00039.json  sake_00040.json  (+739 more)
streamlit/: .trivy.yaml  .trivyignore  README.md  pyproject.toml
streamlit/.streamlit/: config.toml
streamlit/scripts/: clear_all_memory.sh  deploy.sh
streamlit/streamlit_app/: .dockerignore  Dockerfile  __init__.py  app.py  requirements.txt
streamlit/streamlit_app/.streamlit/: config.toml
streamlit/streamlit_app/components/: __init__.py  agentcore_client.py  auth.py
streamlit/streamlit_app/utils/: __init__.py  backend_helper.py  config.py  preference_converter.py  session.py  ui_components.py
streamlit/terraform/: README.md  backend.tf  cloudfront.tf  main.tf  outputs.tf  variables.tf
